--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-          <h4> PHARRELL WILLIAMS </h4>
+          <h4>PHARRELL WILLIAMS</h4>
 
           <!-- Level 2 'HAPPY' Header -->
-          <h2> HAPPY </h2>
+          <h2>HAPPY</h2>
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-          <h4> | FROM DESPICABLE ME 2 |</h4>
+          <h4>|    FROM <b>DESPICABLE ME 2</b>    |</h4>
 
         </div>
       </div>
@@ -28,7 +28,7 @@
         <h3>| &nbsp;&nbsp; FROM <b>DESPICABLE ME 2</b> &nbsp;&nbsp; |</h3>
 
         <!-- Level 1 'HAPPY' Header -->
-        <h1> HAPPY </h1>
+        <h1>HAPPY</h1>
 
         <!-- Level 3 'WRITTEN BY...' Header -->
         <h3> WRITTEN BY <b>PHARRELL WILLIAMS</b> </h3>
